--- a/apps/admin/src/styles/app.css
+++ b/apps/admin/src/styles/app.css
@@ -12,13 +12,13 @@ html {
 body,
 #root,
 .ant-app {
-  @apply text-[0.875rem]  h-full flex;
+  @apply text-[0.875rem]  h-full;
 }
 
-body {
+/* body {
   @apply bg-[url(./images/bg-light.png)];
 }
 
 body.dark {
   @apply bg-[url(./images/bg-dark.png)];
-}
+} */
